fix: Stop fixed nav covering flash messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,4 +238,8 @@ html, body {
           padding-top: 55px;
       }
 
+      section {
+          padding-top: 55px;
+      }
+
   }
